force-app/main/default/objects/UAT_Feedback__c/UAT_Feedback__c.object-meta.xml
<CustomObject>
    <label>UAT Feedback</label>
    <nameField>
        <displayFormat>UATI-{0000}</displayFormat>
        <label>UAT Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UAT Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>