force-app/main/default/objects/UAT_Feedback__c/fields/Actual_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Actual_Behavior__c</fullName>
    <inlineHelpText>What actually happened instead of the expected behavior?</inlineHelpText>
    <label>Actual Behavior</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>