force-app/main/default/objects/UAT_Feedback__c/fields/ExpectedBehavior__c.field-meta.xml
<CustomField>
    <fullName>ExpectedBehavior__c</fullName>
    <inlineHelpText>What was the behavior you expected the system to do?</inlineHelpText>
    <label>Expected Behavior</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>