force-app/main/default/objects/UAT_Feedback__c/fields/JIRA_Ticket_URL__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Ticket_URL__c</fullName>
    <label>JIRA Ticket URL</label>
    <type>Url</type>
</CustomField>