force-app/main/default/objects/UAT_Feedback__c/fields/Needed_for_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Needed_for_Go_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this item needed before the system can go live?</inlineHelpText>
    <label>Needed for Go Live?</label>
    <type>Checkbox</type>
</CustomField>