force-app/main/default/objects/UAT_Feedback__c/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <inlineHelpText>The name of the object that this item is related to. For example, Account, Opportunity, etc.</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>