force-app/main/default/objects/UAT_Feedback__c/fields/PageReferenceInfo__c.field-meta.xml
<CustomField>
    <fullName>PageReferenceInfo__c</fullName>
    <label>Page Reference Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>