force-app/main/default/objects/UAT_Feedback__c/fields/Priority_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Priority_Ranking__c</fullName>
    <label>Priority Ranking</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>