force-app/main/default/objects/UAT_Feedback__c/fields/Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Record_Link__c</fullName>
    <formula>HYPERLINK(
LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; RecordURL__c, &quot;Link to Record&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>