force-app/main/default/objects/UAT_Feedback__c/fields/RecordURL__c.field-meta.xml
<CustomField>
    <fullName>RecordURL__c</fullName>
    <inlineHelpText>Add the URL to the record that was used for testing.</inlineHelpText>
    <label>Record URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>