force-app/main/default/objects/UAT_Feedback__c/fields/Steps__c.field-meta.xml
<CustomField>
    <fullName>Steps__c</fullName>
    <inlineHelpText>Enter the steps that should be used to recreate this issue.</inlineHelpText>
    <label>Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>