force-app/main/default/objects/UAT_Feedback__c/fields/SubmittedBy__c.field-meta.xml
<CustomField>
    <fullName>SubmittedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who was this item submitted by?</inlineHelpText>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UAT_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>