force-app/main/default/objects/UAT_Feedback__c/fields/TaskRayTicket__c.field-meta.xml
<CustomField>
    <fullName>TaskRayTicket__c</fullName>
    <inlineHelpText>Kicksaw TaskRay Ticket</inlineHelpText>
    <label>TaskRay Ticket</label>
    <type>Url</type>
</CustomField>