force-app/main/default/objects/UAT_Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SubmittedBy__c</columns>
    <columns>Description__c</columns>
    <columns>ObjectName__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>