force-app/main/default/objects/UAT_Feedback__c/listViews/Open_Training_Items.listView-meta.xml
<ListView>
    <fullName>Open_Training_Items</fullName>
    <columns>NAME</columns>
    <columns>SubmittedBy__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>Steps__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Enhancement</value>
    </filters>
    <label>Open Training Items</label>
</ListView>