force-app/main/default/objects/UAT_Feedback__c/listViews/Unsorted_UAT_Items.listView-meta.xml
<ListView>
    <fullName>Unsorted_UAT_Items</fullName>
    <columns>NAME</columns>
    <columns>SubmittedBy__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>Steps__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
    </filters>
    <label>Unsorted UAT Items</label>
</ListView>